Added labels to box figures.

--- a/LabWeek05_V01.html
+++ b/LabWeek05_V01.html
@@ -14,7 +14,7 @@ class: center, middle, inverse, title-slide
 # Lab Week 05
 ## Onwards and Upwards
 ### Chris Mellinger
-### 2019/09/23 (updated: 2019-09-25)
+### 2019/09/23 (updated: 2019-09-26)
 
 ---
 
@@ -77,7 +77,9 @@ We want to try and keep things manageable in situations like these.
 
 200 hypotheses! Half are really true, and half are really false.&lt;sup&gt;1&lt;/sup&gt;
 
-&lt;img src="./graphics/AllHyps2.png" height="300px" /&gt;
+&lt;img src="./graphics/AllHyps2.png" height="280px" /&gt;
+
+Each box is a hypothesis. The solid blue boxes are true in reality, and the open (white) boxes are false in reality.
 
 .footnote[
 [1] We can never really know how many or what proportion of investigated hypotheses are true or false.
@@ -89,7 +91,13 @@ We want to try and keep things manageable in situations like these.
 
 `\((1-\beta) = .80\)` &amp; `\(\alpha=.05\)`
 
-&lt;img src="./graphics/P80A052.png" height="300px" /&gt;
+&lt;img src="./graphics/P80A052.png" height="280px" /&gt;
+
+Boxes outlined in green are ones that our studies identified as "true." Boxes outlined in red we failed to find evidence for. Thus:
+- Solid blue boxes outlined in green are HITs.
+- Solid blue boxes outlined in red are MISSes.
+- White boxes outlined in green are FALSE ALARMS.
+- White boxes outlined in red indicate we were CORRECTLY QUIET.
 
 ---
 
@@ -97,7 +105,7 @@ We want to try and keep things manageable in situations like these.
 
 `\((1-\beta) = .90\)` &amp; `\(\alpha=.05\)`
 
-&lt;img src="./graphics/P90A052.png" height="300px" /&gt;
+&lt;img src="./graphics/P90A052.png" height="280px" /&gt;
 
 ---
 
@@ -105,7 +113,7 @@ We want to try and keep things manageable in situations like these.
 
 Notice, power and alpha refer to *different subsets.*
 
-&lt;img src="./graphics/P90A052.png" height="300px" /&gt;
+&lt;img src="./graphics/P90A052.png" height="280px" /&gt;
 
 ---
 
